1) update examples 2) quick/dirty rebrand 3) remove json import/download

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
   <head>
     <meta charset="utf-8">
-    <title>Swagger Editor</title>
-    <meta name="description" content="Swagger Editor">
+    <title>opspec editor</title>
+    <meta name="description" content="http://opspec.io editor">
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" type="image/png" href="./images/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="./images/favicon-16x16.png" sizes="16x16" />
+
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/favicon-48x48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96">
+
+    <!-- our styles -->
     <link rel="stylesheet" href="dist/styles.css">
     <link rel="stylesheet" href="styles/branding.css">
   </head>
