--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>opspec editor</title>
     <meta name="description" content="http://opspec.io editor">
     <meta name="viewport" content="width=device-width">
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
